--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>anticore-default-project</title>
+        <title>anticore's Default Project</title>
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
         <link href="assets/css/style.css" rel="stylesheet" />
     </head>
     <body>
         <header>
-            <h1>anticore-default-project</h1>
+            <h1>anticore's Default Project</h1>
         </header>
         <main>
             <a href="./fragments/default.html">Load the default content</a>
